--- a/22_prisma_orm/package.json
+++ b/22_prisma_orm/package.json
@@ -15,5 +15,8 @@
     "prisma": "^6.11.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "@prisma/client": "^6.11.1"
   }
 }
