--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
     "mongoose": "^8.15.1",
     "pg": "^8.16.3",
     "zod": "^3.25.20"
+  },
+  "devDependencies": {
+    "@types/node": "^24.0.10",
+    "prisma": "^6.11.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
